--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
   font-family: 'Poppins', 'Proza Libre', sans-serif;
 }
 
@@ -11,7 +12,7 @@
   --main-bg-color: #04010f;
 }
 
-section > div{
+section>div {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -109,12 +110,15 @@ section > div{
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   overflow-x: hidden;
   position: relative;
 }
 
 .img-wrapper {
   width: 20%;
+  min-width: 170px;
+  margin: 3px 1px;
   border: 5px solid rgba(255, 255, 255, 0.5);
   border-radius: 15px;
   overflow: hidden;
@@ -156,11 +160,11 @@ section > div{
 
 /* Marks CSS */
 
-#marks-container{
+#marks-container {
   min-height: 90vh;
 }
 
-#marks-count-container{
+#marks-count-container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -169,13 +173,46 @@ section > div{
   opacity: 0;
 }
 
-.marks-solo-container{
+.marks-solo-container {
   text-align: center;
   min-width: 60px;
 }
 
-.marks-label h2{
+.marks-label h2 {
   margin-bottom: 40px;
+}
+
+/* Projects CSS */
+
+#projects-container {
+  overflow: hidden;
+}
+
+#projects-img-container {
+  position: relative;
+  width: 100%;
+  transform: translate3d(300px, 0, 0);
+  opacity: 0;
+}
+
+/* ProjectSlider CSS */
+
+#image-track {
+  display: flex;
+  gap: 4vmin;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(0%, -50%);
+  user-select: none;
+  /* -- Prevent image highlighting -- */
+}
+
+#image-track>.image {
+  width: 40vmin;
+  height: 56vmin;
+  object-fit: cover;
+  object-position: 100% center;
 }
 
 /* Carousel CSS */
@@ -327,6 +364,14 @@ body {
   transform: translate3d(0, 0, 0) !important;
   opacity: 1 !important;
   transition: all 1s ease;
+}
+
+.select-disabled {
+  user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
 }
 
 /* https://codepen.io/Hyperplexed/pen/MWXBRBp */
