--- a/src/App.css
+++ b/src/App.css
@@ -222,18 +222,27 @@ section>div {
 /* ContactPage CSS */
 
 #contact-container{
+  width: 100%;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
 
 #contact-form-container{
+  /* width: calc(50% - 0.5px); */
   margin: auto;
-  padding: 3rem;
+  padding: 2.5rem 3rem;
   border-right: 1px solid rgba(255, 255, 255, 0.8);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transform: translate3d(-100px, 0, 0);
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
 }
 
 #contact-form-container h3{
@@ -246,12 +255,74 @@ section>div {
   width: 70%;
 }
 
+.contact-input-wrapper{
+  height: 40px;
+  width: 100%;
+  margin: 10px 0px;
+  position: relative;
+}
+
+#contact-desc-wrapper{
+  height: 45px;
+  margin: 15px 0px;
+}
+
+.contact-input-wrapper input, .contact-input-wrapper textarea{
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  border-bottom: 1px solid var(--primary-text-color);
+  background-color: transparent;
+  color: var(--primary-text-color);
+  resize: none;
+}
+
+.contact-input-wrapper label{
+  position: absolute;
+  top: 25%;
+  left: 1px;
+  cursor: pointer;
+  color: #adadad;
+  transition: all 0.3s ease;
+}
+
+.contact-input-wrapper input:focus ~ label,
+.contact-input-wrapper input:valid ~ label {
+  transform: translateY(-20px);
+  font-size: 0.9rem;
+  color: var(--primary-text-color);
+  cursor: unset;
+}
+
+.contact-input-wrapper textarea:focus ~ label,
+.contact-input-wrapper textarea:valid ~ label {
+  transform: translateY(-30px);
+  font-size: 0.9rem;
+  color: var(--primary-text-color);
+  cursor: unset;
+}
+
+/* .border-divider{
+  border-top: 0.5px solid var(--primary-text-color);
+  border-bottom: 0.5px solid var(--primary-text-color);
+} */
+
 #contact-other-container{
+  /* width: calc(50% - 0.5px); */
   padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  transform: translate3d(100px, 0, 0);
+  opacity: 0;
+  transition: all 0.4s ease-in-out;
 }
 
 #contact-other-container > div{
   width: 255px;
+  margin: 1rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
