--- a/src/App.css
+++ b/src/App.css
@@ -265,7 +265,7 @@ nav a{
   /* -- Prevent image highlighting -- */
 }
 
-#image-track>.image {
+#image-track .image {
   width: 40vmin;
   height: 56vmin;
   object-fit: cover;
@@ -600,6 +600,24 @@ body {
   -ms-user-select: none;
   -moz-user-select: none;
   -khtml-user-select: none;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 1);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--secondary-text-color);
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(115, 57, 169);
 }
 
 /* https://codepen.io/Hyperplexed/pen/MWXBRBp */
