--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
   --primary-text-color: #fff;
   --secondary-text-color: rgba(170, 107, 228, 1);
   --main-bg-color: #04010f;
+  --nav-bg-col: rgba(67, 32, 87, 0.85);
+  --nav-bg-col2: rgb(129 63 160 / 50%);
   --btn-color: #1e2167;
 }
 
@@ -41,10 +43,14 @@ nav {
   width: 100%;
   padding: 15px 10px;
   margin-bottom: 20px;
+  position: fixed;
+  z-index: 1000;
+  /* background-color: var(--nav-bg-col2); */
+  background-color: var(--nav-bg-col);
 }
 
 .nav-dropdown-active {
-  height: 346px;
+  /* height: 346px; */
   transition: all 1s ease;
 }
 
@@ -64,6 +70,7 @@ nav {
 }
 
 #nav-pc-links a, #nav-dropdown-container ul a{
+  height: 32.4px;
   text-decoration: none;
   color: var(--primary-text-color);
   font-size: 1.1rem;
@@ -74,11 +81,11 @@ nav {
 }
 
 #nav-pc-links a:hover, #nav-dropdown-container ul a:hover{
-  border-bottom: 3px solid rgba(255, 255, 255, 0.8);
+  border-bottom: 3.95px solid rgba(255, 255, 255, 0.8);
 }
 
 #nav-pc-links a:active, #nav-dropdown-container ul a:active{
-  border-bottom: 3px solid rgba(255, 255, 255, 1);
+  border-bottom: 3.95px solid rgba(255, 255, 255, 1);
 }
 
 #nav-mob-btn-container {
@@ -94,7 +101,7 @@ nav {
   border: none;
   cursor: pointer;
   position: absolute;
-  top: 25%;
+  top: 0;
   right: 0;
   z-index: 50;
   opacity: 0;
@@ -119,7 +126,7 @@ nav {
   position: absolute;
   top: 0;
   right: 0;
-  padding: 10px 10px;
+  padding: 4.6px 10px;
   background-color: #292A38;
   border: 1px solid white;
   opacity: 0;
@@ -154,6 +161,10 @@ nav {
   display: inline-block;
 }
 
+.nav-li-active{
+  border-bottom: 3.95px solid white;
+}
+
 @media only screen and (max-width: 1200px) {
   #nav-pc-links{
     width: 65%;
@@ -173,7 +184,8 @@ nav {
 /* Intro CSS */
 
 #intro-container {
-  min-height: 100vh;
+  min-height: calc(100vh + 100px);
+  padding-top: 100px;
   /* display: flex;
   justify-content: center;
   align-items: center; */
