--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@ nav {
 }
 
 .nav-li-active{
-  border-bottom: 3.95px solid white;
+  border-bottom: 3.95px solid white !important;
 }
 
 @media only screen and (max-width: 1200px) {
